# Restaurant_Cmysql

./: .env.sample  .gitignore  CMakeLists.txt  README.md  database.c  database.h  kelola_menu.c  lihat_riwayat.c  main.c  makefile  setup.sql  tambah_menu.c  tambah_pelanggan.c  tambah_pesanan.c
src/: database.c  database.h  login.c  multiplatform.h
src/karyawan/: kelola_karyawan.c  main.c
src/restoran/: kelola_menu.c  lihat_riwayat.c  main.c  tambah_pesanan.c
